# smart-pet-door

./: README.md
kicad_files/: _project.kicad_sch.lck  project.kicad_prl  project.kicad_pro  project.kicad_sch
smart_pet_door/attempt4micro/embassy/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
smart_pet_door/attempt4micro/embassy/src/: main.rs
