[package]
name = "attempt4micro"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cyw43 = "0.1.0"
cyw43-pio = "0.1.0"
defmt = "0.3.7"
defmt-rtt = "0.4.1"
defmt-serial = "0.8.0"
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-rp = { version = "0.1.0", features = [
    "time-driver",
    "critical-section-impl",
] }
embassy-time = "0.3.0"
embassy-usb-logger = "0.2.0"
embedded-io-async = "0.6.1"
log = "0.4.21"
panic-probe = "0.3.2"
